cluster/prod/plex/plex/plex.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
  labels:
    app.kubernetes.io/name: plex
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: plex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plex
    spec:
      nodeSelector:
        kubernetes.io/hostname: nuc
      automountServiceAccountToken: false
      containers:
      - name: plex
        image: plexinc/pms-docker:plexpass
        ports:
        - containerPort: 32400
          protocol: TCP
        resources:
          limits:
            gpu.intel.com/i915: 1
        livenessProbe:
          httpGet:
            port: 32400
            path: /web/index.html
            scheme: HTTPS
          initialDelaySeconds: 30
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 20
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /data
          name: complete
          readOnly: true
        - mountPath: /data/Audiobooks
          name: audiobooks
          readOnly: true
        - mountPath: /config
          name: plex-config
        - mountPath: "/config/Library/Application Support/Plex Media Server/plex.nathanpawelek.com.pfx"
          name: certs
          subPath: plex.nathanpawelek.com.pfx
          readOnly: true
      volumes:
      - name: kubeconfig
        secret:
          secretName: kubeconfig
      - name: get-certs-script
        configMap:
          name: get-certs-script
      - name: certs
        emptyDir: {}
      - name: complete
        nfs:
          path: /volume1/Complete
          server: 192.168.0.150
      - name: audiobooks
        nfs:
          path: /volume1/Backup/Resilio/Audiobooks
          server: 192.168.0.150
      - name: plex-config
        hostPath:
          path: /plex
          type: Directory
