cluster/prod/plex/plex/plex-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
  labels:
    app.kubernetes.io/name: plex
spec:
  selector:
    app.kubernetes.io/name: plex
  ports:
  - protocol: TCP
    port: 443
    targetPort: 32400
  type: LoadBalancer
  loadBalancerIP: 192.168.0.11
  externalTrafficPolicy: Local
