cluster/prod/plex/plex/plex-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-plex-ingress
  namespace: plex
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: plex
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 32400
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-plex-egress
  namespace: plex
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: plex
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          dns-ns: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: adguard
      podSelector:
        matchLabels:
          app.kubernetes.io/name: adguard-home
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.10/32
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
    ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.21/32
    ports:
    - port: 6443
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.22/32
    ports:
    - port: 6443
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.23/32
    ports:
    - port: 6443
      protocol: TCP
